--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -73,20 +73,17 @@
         width: 100%;
       }
     }
+
+    &__carousel-title {
+      @include h500;
+
+      margin-top: 96px;
+      grid-column: 2 / 12;
+    }
   }
 
   &__joystream-dao-carousel {
     $carousel-gap: 24px;
-
-    margin-top: 96px;
-
-    &__title-section {
-      @extend %container;
-
-      &__text {
-        @include h6;
-      }
-    }
 
     &__items-wrapper {
       display: flex;
@@ -117,12 +114,14 @@
       height: 288px;
       padding: 24px;
       background-color: $c_white;
+      border-radius: 8px;
 
       &__image {
         width: 40px;
         height: 40px;
         overflow: hidden;
         background-color: rgba(0, 0, 0, .3);
+        border: 2px solid $c_black;
         border-radius: 50%;
 
         & > img {
@@ -132,11 +131,12 @@
       }
 
       &__title {
-        @include h6;
+        @include h400;
         @include line-clamp(2);
 
         min-height: 64px;
         margin-top: 24px;
+        line-height: 29px;
       }
 
       &__info {
@@ -148,13 +148,13 @@
           min-width: 108px;
 
           &__label {
-            @include base-5;
+            @include t100;
 
             color: #81858d;
           }
 
           &__value {
-            @include base-5;
+            @include t100;
 
             display: grid;
             width: 72px;
@@ -173,13 +173,13 @@
 
         &__date {
           &__label {
-            @include base-5;
+            @include t100;
 
             color: #81858d;
           }
 
           &__value {
-            @include h9;
+            @include t300;
 
             margin-top: 4px;
           }
@@ -187,7 +187,7 @@
       }
 
       &__link {
-        @include h9;
+        @include t300;
 
         display: block;
         display: flex;
@@ -195,6 +195,7 @@
         justify-content: space-between;
         width: 149px;
         margin-top: 24px;
+        font-weight: 600;
 
         &__icon {
           margin-top: 3px;
@@ -221,6 +222,10 @@
       &__illustration {
         grid-column: 1 / 13;
       }
+
+      &__carousel-title {
+        grid-column: 1 / 13;
+      }
     }
   }
 
@@ -239,6 +244,16 @@
       &__illustration {
         margin-top: 56px;
       }
+
+      &__carousel-title {
+        @include h400;
+
+        margin-top: 64px;
+      }
+    }
+
+    &__joystream-dao-carousel {
+      margin: 0 -16px;
     }
   }
 
@@ -272,6 +287,10 @@
         @include t300;
 
         font-weight: 600;
+      }
+
+      &__carousel-title {
+        @include h300;
       }
     }
   }
