--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -46,6 +46,7 @@
 
     &__content-section {
       display: grid;
+      // max-width: 1142px;
       min-height: 413px;
       margin-top: 96px;
       gap: 32px;
