--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -13,8 +13,9 @@
     &__main {
       display: grid;
       height: 512px;
-      gap: 30px;
-      grid-template-columns: 500px auto;
+      gap: 24px;
+      grid-column: 2 / 12;
+      grid-template-columns: auto 676px;
 
       &__content {
         display: flex;
@@ -22,32 +23,30 @@
         justify-content: center;
 
         &__section-title {
-          @include section-title;
+          @include h400;
 
           color: #6c6cff;
         }
 
         &__title {
-          @include h3;
+          @include h600;
 
           margin-top: 4px;
           color: $c_white;
         }
 
         &__subtitle {
-          @include base-1;
+          @include t400;
 
           margin-top: 16px;
           color: #a7aeb7;
         }
 
         &__link {
+          @include t400;
+
           margin-top: 32px;
-          font-family: $font-primary;
-          font-size: 20px;
-          font-weight: 400;
-          line-height: 28px;
-          letter-spacing: 0;
+          font-weight: 600;
           color: #6c6cff;
 
           &__arrow {
@@ -60,15 +59,17 @@
 
       &__illustration {
         position: relative;
-        height: 512px;
         overflow: hidden;
 
         &__background {
-          position: absolute;
+          // position: absolute;
+          width: 100%;
         }
 
         &__foreground {
           position: absolute;
+          top: 0;
+          left: 0;
         }
       }
 
@@ -136,6 +137,20 @@
         grid-column: 1 / 13;
       }
 
+      &__main {
+        height: 417px;
+        grid-column: 1 / 13;
+        grid-template-columns: auto 550px;
+
+        &__illustration {
+          &__foreground {
+            position: absolute;
+            top: 65px;
+            left: 0;
+          }
+        }
+      }
+
       &__grid-item {
         &__illustration {
           position: relative;
@@ -167,6 +182,44 @@
     }
 
     &__creator-tokens {
+      &__main {
+        display: flex;
+        flex-direction: column-reverse;
+        height: auto;
+
+        &__content {
+          &__title {
+            @include h500;
+          }
+        }
+
+        &__illustration {
+          position: relative;
+          width: 100%;
+          overflow: hidden;
+
+          & > div:first-of-type {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            margin: auto;
+            -webkit-transform: none !important;
+            transform: none !important;
+            inset: 0;
+          }
+
+          &__foreground {
+            top: 22%;
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        &__overlay {
+          height: 140px;
+        }
+      }
+
       &__grid {
         display: flex;
         flex-direction: column;
@@ -201,6 +254,22 @@
 
   @media (max-width: 768px) {
     &__creator-tokens {
+      &__main {
+        &__content {
+          &__title {
+            @include h500;
+          }
+
+          &__subtitle {
+            @include t300;
+          }
+        }
+
+        &__overlay {
+          height: 75px;
+        }
+      }
+
       &__grid {
         gap: 56px;
       }
@@ -233,8 +302,30 @@
     }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 425px) {
     &__creator-tokens {
+      &__main {
+        &__content {
+          &__title {
+            @include h400;
+          }
+
+          &__subtitle {
+            @include t300;
+          }
+
+          &__link {
+            @include t300;
+
+            font-weight: 600;
+          }
+        }
+
+        &__overlay {
+          height: 55px;
+        }
+      }
+
       &__grid-item {
         &__illustration {
           width: 100%;
